# book_and_drook

./: .gitignore  Dockerfile  Dockerfile_old  docker-compose-staging.yml  docker-compose.insecure.yml  docker-compose.yml  docker-compose_old.yml  init-letsencrypt.sh  pyproject.toml  requirements.txt
backend/: Dockerfile  app.py  asgi.py  auth.py  database.py  database.ts  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
backend/blueprints/: api.py  authentication.py  main.py
backend/routers/: api.ts  authentication.ts
backend/types/express/: index.d.ts
data/: nginx.conf  nginx.insecure.conf  nginx.staging.conf
express/: database.ts  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
express/routers/: api.ts  authentication.ts  main.ts
express/scripts/: build.sh  prepare-svelte.sh
express/types/express/: index.d.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  components.tsx  index.scss  index.tsx  utils.tsx
frontend/src/pages/: Index.tsx  Libraries.tsx  Login.tsx  Monster.tsx  Playbill.tsx  Register.tsx  Support.tsx
svelte/: package-lock.json  package.json  vite.config.ts
svelte/src/components/: LoginInput.svelte  RepeatPwd.svelte
svelte/src/routes/(auth)/login/: +page.svelte
svelte/src/routes/(auth)/register/: +page.svelte
svelte/src/routes/monster/: +page.svelte
